Update the button for next time

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
        <label for = "email">email: </label> 
        <input type = "text" id = "email"><br> 
     
-       <input type = "radio" name = "sex" value = "male"> Male<br> 
-       <input type = "radio" name = "sex" value = "female"> Female<br> 
+       <input type = "radio" name = "gender" value = "male"> Male<br> 
+       <input type = "radio" name = "gender" value = "female"> Female<br> 
        <input type = "submit" value = "send"> <input type = "reset"> 
     </p> 
  </form> 
@@ -45,8 +45,6 @@
 
 <p><p>&#65; &#66; &#67;<\p>
 <br>
-
-
 
 
 
